<resources>
    <string name="app_name">16 пунктов</string>
    <string name="title_list_rules">Правила</string>
    <string name="title_practice">Практика</string>
    <string name="title_profile">Профиль</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_first_fragment"></string>
    <string name="next">Следующий</string>
    <string-array name="genderList">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <string-array name="languageList">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>
    <string-array name="modeList">
        <item>Свайп</item>
        <item>Таблица</item>
    </string-array>
    <string-array name="reminderList">
        <item>Выключено</item>
        <item>Включено</item>
    </string-array>
    <string name="title_activity_stack">StackActivity</string>
    <string name="number_rule">Номер правила</string>
    <string name="sample_str_rule">Текст большого правила</string>
    <string name="table">Таблица</string>
    <string name="swipe_mode">Свайп режим</string>
    <string name="perfect">Идеально</string>
    <string name="good">Хорошо</string>
    <string name="bad">Плохо</string>
    <string name="back">Назад</string>
    <string name="skip">Пропустить</string>
    <string name="everyday_dh">Еженедельная дхармачакра</string>
    <string name="finish_estimate">Завершить оценку</string>
    <string name="userName">Имя пользователя</string>
    <string name="gender">Пол</string>
    <string name="estimateRules">Оценить правила</string>
    <string name="instruction">Руководство</string>
    <string name="resetAll">Сброс</string>
    <string name="level_1">1 уровень</string>
    <string name="level_2">2 уровень</string>
    <string name="reminder">Напоминание:</string>
    <string name="feedback">Обратная связь</string>
    <string name="curs">Курс</string>
    <string name="button_base">Базовый</string>
    <string name="button_advanced">Продвинутый</string>
    <string name="select5rules">Выберите не более 5 практик</string>
    <string name="sample_rule_short_name">Полуванна перед садханой тест</string>
    <string name="sample_rule_1">Пункт № 1</string>
    <string name="sample_rule">Практика омывания водой способствует охлаждению органов .....</string>
    <string name="add">Добавить</string>
    <string name="i_can_do_it">Я это умею</string>
    <string name="in_practice">В практике</string>
    <string name="unavailable">Недоступно</string>
    <string name="select5rules_finish">Выбор сделан</string>
    <string name="info_swipe">Для выполенения нажмити\nкнопку или сделайте свайп</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sampleRuleName">Название практики</string>
    <string name="sampleRuleDescription">Реферат по эстетике Тема: «Первоначальный комплекс агрессивности — актуальная национальная задача»</string>
    <string name="namaskar">Намаскар,</string>
    <string name="sample_name">Манавендра</string>
    <string name="beginner">Начинающий</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="sample_user_name">Манавендра</string>
    <string name="label_user_name">Имя пользователя</string>
    <string name="gender_2">Пол:</string>
    <string name="language_2">Язык системы:</string>
    <string name="practice_mode">Режим практики:</string>
    <string name="add_label">Добавить</string>
</resources>