<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_practice">

    <fragment
        android:id="@+id/navigation_list_rules"
        android:name="ru.am.conduct_rules.ui.list_rules.ListRulesFragment"
        android:label="@string/title_list_rules"
        tools:layout="@layout/fragment_list_rules" />

    <fragment
        android:id="@+id/navigation_practice"
        android:name="ru.am.conduct_rules.ui.practice.PracticeFragment"
        android:label="@string/title_practice"
        tools:layout="@layout/fragment_practice" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.am.conduct_rules.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>