<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_estimate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/cell_shape_corner"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCodeRule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:paddingLeft="20dp"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#DAD9DE" />

            <TextView
                android:id="@+id/textViewIndexRule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textAlignment="textEnd"
                android:paddingRight="20dp"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewRuleEstimate"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/cell_shape_corner"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/everyday_dh"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/cell_shape_corner"
            android:backgroundTint="@color/Green"
            android:text="@string/perfect"
            android:tag="3"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:onClick="onButtonClickEstimate"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/cell_shape_corner"
            android:backgroundTint="@color/Orange"
            android:text="@string/good"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:tag="2"
            android:onClick="onButtonClickEstimate"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/cell_shape_corner"
            android:backgroundTint="@color/Red"
            android:text="@string/bad"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:tag="1"
            android:onClick="onButtonClickEstimate"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonBackM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/back"
                android:layout_marginEnd="5dp"
                android:onClick="onButtonClickBack"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:enabled="false"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:layout_marginStart="5dp"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:background="@android:color/transparent"
                android:onClick="onButtonClickEstimate"
                 />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>