<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:id="@+id/linerLayoutUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingLeft="10dp"
                android:text="Не задано"
                android:textSize="16sp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"></TextView>

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:entries="@array/genderList" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Язык системы"
            android:textSize="14sp"></TextView>

        <Spinner
            android:id="@+id/spinnerLanguage"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:entries="@array/languageList" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"

        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder"
                    android:textSize="14sp"></TextView>

                <Spinner
                    android:id="@+id/spinnerReminder"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/reminderList" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linerLayoutReminder"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"

                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Время"
                    android:textSize="14sp"></TextView>

                <TextView
                    android:id="@+id/textViewReminderTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="datetime"
                    android:text="21:00"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Режим практики"></TextView>

        <Spinner
            android:id="@+id/spinnerMode"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:entries="@array/modeList" />

    </LinearLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/buttonRunEstimate"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_corner"
        android:text="@string/estimateRules"></Button>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_corner"
        android:text="@string/instruction" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_corner"
        android:text="@string/resetAll" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_corner"
        android:onClick="onButtonFeedback"
        android:text="@string/feedback" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

    </LinearLayout>


</LinearLayout>
