<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_rule"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/frame_corner"
    android:fontFamily="@font/jost"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_unavailable_practice"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="20dp"
                    android:text="@string/unavailable"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_in_practice"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_note_in_practice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/btn_delete_rule"
                    android:text="@string/in_practice"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textSize="14dp"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/btn_delete_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:background="#FFFFFF"
                    android:paddingTop="2dp"
                    android:paddingEnd="10dp"
                    android:src="@drawable/button_close_rule"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_count_days_p"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/tv_separator"
                    android:fontFamily="@font/manrope_extrabold"
                    android:text="1"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/tv_count_days_all"
                    android:fontFamily="@font/manrope_extrabold"
                    android:text="/"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_count_days_all"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/manrope_medium"
                    android:paddingTop="1sp"
                    android:text="21"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_logo_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_red"></ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_number_rule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/manrope_regular"
                        android:text="@string/sample_rule_1"
                        android:textColor="@android:color/black"
                        android:textFontWeight="400"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingRight="10dp">

                        <TextView
                            android:id="@+id/tv_short_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/manrope_bold"
                            android:text="@string/sample_rule_short_name"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <ImageButton
                            android:id="@+id/btn_expand"
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:background="#FFFFFF"
                            android:src="@drawable/expand_rule"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_out_practice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_rule_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/manrope_regular"
                    android:lineHeight="29sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/sample_rule"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/ll_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/button_add_corner"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add_black"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/PrimaryBlack"
                        android:textAllCaps="false"
                        android:fontFamily="@font/manrope_regular"
                        android:text="@string/add_label"
                        android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/v_right"
            android:layout_width="30dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_calendar"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="gone"/>
</LinearLayout>